@@ -1,5 +1,10 @@
 2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>
 
+	* Time/NTP.pm: module for handling NTP servers configuration
+	* NTPConfig.pm: toplevel object for dealing with NTP config
+
+2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>
+
 	* test-backends: improved a bit, removed unused code
 
 2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>
